<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">私密图片&amp;文本管理器</string>
    <string name="shezhi">设置</string>
    <string name="hintText">空</string>
    <string name="title">标题(＜18)</string>
    <string name="settingSound">声效</string>
    <string name="settingColor">背景颜色</string>
    <string name="settingSize">字体大小</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="shockState">震动</string>
    <string name="background">标题栏颜色</string>
    <string name="hui">灰</string>
    <string name="lan">蓝</string>
    <string name="lv">粉</string>
    <string name="textSizeXiao">较小</string>
    <string name="textSizeZhong">中</string>
    <string name="textSizeDa">较大</string>
    <string name="back">退出</string>
    <string name="guidText">文本</string>
    <string name="guidImage">图片</string>
    <string name="untitled">无标题</string>
    <string name="delete">删除</string>
    <string name="question">确定要删除此项?</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="autoPlay">自动播放||</string>
    <string name="delete1">||删除</string>
    <string name="autoPlay_time">自动播放的时间间隔</string>
    <string name="time1">2 S</string>
    <string name="time2">3 S</string>
    <string name="time3">4 S</string>
    <string name="inputPasswd">请输入密码</string>
    <string name="determine">OK</string>
    <string name="passwdLeast">密码不少于4位</string>
    <string name="passwdError">密码错误</string>
    <string name="passwdDetermine">确认密码</string>
    <string name="passwdCause">两次输入的密码不同!</string>
    <string name="passwdAgainSet">请重新设置密码</string>
    <string name="passwdAgain">请重新输入</string>
    <string name="passwdReset">重置密码</string>
    <string name="passwdResetSuccess">重置密码成功</string>
    <string name="passwdOld">请输入原密码</string>
    <string name="passwdTrueOld">请输入正确的原密码</string>
    <string name="passwdNew">请输入新密码</string>
    <string name="passwdNewDetermine">确认新密码</string>
    <string name="add">添加</string>
</resources>
