<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/white"
    android:scrollbars="vertical"
    android:scrollbarFadeDuration="1234"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@drawable/grey"
        android:orientation="horizontal" 
        android:id="@+id/setting_relay"
        >

        <ImageView
            android:id="@+id/backSetting"
            android:layout_width="@dimen/titlebar_height"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="0"
            android:scaleType="fitStart"
            android:src="@drawable/jiantou" 
            />

        <TextView
            android:id="@+id/shezhi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:enabled="false"
            android:text="@string/shezhi"
			style="@style/styleText1"
             />
    </RelativeLayout>

        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/textview_setting"
            >
            <TextView 
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/titlebar_height"
                android:text="@string/settingSound"
                style="@style/styleText1_setting"
                android:layout_weight="1"
                />
             <RadioGroup
                 android:id="@+id/radioGroup1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
                 android:layout_weight="1"
                 >
                 <RadioButton 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/openVoice"
                     android:text="@string/open"
                     />
                 <RadioButton 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/closeVoice"
                     android:text="@string/close"
                     />
              </RadioGroup>
        </TableRow>
        
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/textview_setting"
            >
            <TextView
                android:id="@+id/textView2"
                style="@style/styleText1_setting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/titlebar_height"
                android:layout_weight="1"
                android:text="@string/shockState" />
             <RadioGroup
                 android:id="@+id/radioGroup2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
                 android:layout_weight="1"
                 >
                 <RadioButton 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/openShock"
                     android:text="@string/open"
                     />
                 <RadioButton 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/closeShock"
                     android:text="@string/close"
                     />
              </RadioGroup>
        </TableRow>
        
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/textview_setting"
            >
            <TextView 
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/background"
                style="@style/styleText1_setting"
                android:layout_weight="1"
                />
             <RadioGroup
                 android:id="@+id/radioGroup3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
                 android:layout_weight="1"
                 >
                 <RadioButton 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/buttonHui"
                     android:text="@string/hui"
                     />
                 <RadioButton 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/buttonLan"
                     android:text="@string/lan"
                     />
                 <RadioButton 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/buttonLv"
                     android:text="@string/lv"
                     />
              </RadioGroup>
        </TableRow>
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/textview_setting"
            >
            <TextView 
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:text="@string/settingSize"
                style="@style/styleText1_setting"
                android:layout_weight="1"
                />
             <RadioGroup
                 android:id="@+id/radioGroup4"
                 android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center_vertical"
                 android:layout_weight="1"
                 >
                 <RadioButton 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/buttonXiao"
                     android:text="@string/textSizeXiao"
                     />
                 <RadioButton 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/buttonZhong"
                     android:text="@string/textSizeZhong"
                     />
                 <RadioButton 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/buttonDa"
                     android:text="@string/textSizeDa"
                     />
              </RadioGroup>
        </TableRow>
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/textview_setting"
            >
            <TextView 
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:text="@string/autoPlay_time"
                style="@style/styleText1_setting"
                android:layout_weight="1"
                />
             <RadioGroup
                 android:id="@+id/radioGroup5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center_vertical"
                 android:layout_weight="1"
                 >
                 <RadioButton 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/buttonTime1"
                     android:text="@string/time1"
                     />
                 <RadioButton 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/buttonTime2"
                     android:text="@string/time2"
                     />
                 <RadioButton 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/buttonTime3"
                     android:text="@string/time3"
                     />
              </RadioGroup>
        </TableRow>
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/textview_setting"
			>
            <Button 
                android:id="@+id/passwdReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwdReset"
                style="@style/styleText1_setting"
                />
        </TableRow>

</LinearLayout>








