<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/white"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@drawable/grey"
        android:orientation="horizontal" 
        android:id="@+id/text_relay"
        >

        <ImageView
            android:id="@+id/backText"
            android:layout_width="@dimen/view_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="0"
            android:scaleType="fitStart"
            android:src="@drawable/jiantou" 
            />

        <TextView
            android:id="@+id/shezhi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingLeft="0sp"
            android:paddingRight="10sp"
            android:text="@string/shezhi"
            style="@style/styleText1"
             />

    </RelativeLayout>

    <EditText 
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:hint="@string/title"
        style="@style/styleText1_editTitle"
        />
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <EditText 
        android:id="@+id/editView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/hintText"
		style="@style/styleText1_editView"
        />
    </ScrollView>
</LinearLayout>










