<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/white"
    android:id="@+id/image_linearLayout"
    >
    <AdapterViewFlipper
 	    android:id="@+id/image_view"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:flipInterval="2000"
 	    />
    <RelativeLayout
        android:id="@+id/text_relay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@drawable/grey"
        android:orientation="horizontal" 
        >
        <ImageView
            android:id="@+id/back_image"
            android:layout_width="@dimen/view_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="0"
            android:scaleType="fitStart"
            android:src="@drawable/jiantou" 
            />
        <TextView
            android:id="@+id/shanchu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingLeft="0sp"
            android:paddingRight="10sp"
            android:text="@string/delete1"
            style="@style/styleText1"
             />
         <TextView 
            android:id="@+id/image_setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/shanchu"
            android:text="@string/shezhi"
            style="@style/styleText1"
            />
        <TextView 
            android:id="@+id/autoPlay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/image_setting"
            android:text="@string/autoPlay"
            style="@style/styleText1"
            />
    </RelativeLayout>
 	
</FrameLayout>




